[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queue-sim"
version = "0.1.3"
description = "Discrete-event simulator for queueing networks"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Akira", email = "avdg@cmu.edu" }]
license = { text = "MIT" }
keywords = ["simulation", "queueing", "discrete-event", "scheduling"]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/Ak33ra/queue-sim"
Issues = "https://github.com/Ak33ra/queue-sim/issues"

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["example_*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["queue_sim*"]

[tool.setuptools.package-data]
queue_sim = ["py.typed"]
